--- a/css/base.css
+++ b/css/base.css
@@ -3,43 +3,46 @@
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 @media (min-width: 992px) {
-  /* line 17, ../inventory_styles/sass/base.scss */
+  /* line 15, ../inventory_styles/sass/base.scss */
   .card-header .serial {
     text-align: right;
   }
 
-  /* line 25, ../inventory_styles/sass/base.scss */
+  /* line 20, ../inventory_styles/sass/base.scss */
   .card-body .item-info-action {
     text-align: right;
   }
-  /* line 28, ../inventory_styles/sass/base.scss */
+  /* line 23, ../inventory_styles/sass/base.scss */
   .card-body .item-info-action .action-container button {
     display: block;
     width: 100%;
   }
 }
 @media (min-width: 1200px) {
-  /* line 41, ../inventory_styles/sass/base.scss */
+  /* line 36, ../inventory_styles/sass/base.scss */
   .card-body .item-info-action .action-container {
     margin-top: 0 !important;
   }
 }
-/* line 50, ../inventory_styles/sass/base.scss */
+/* line 43, ../inventory_styles/sass/base.scss */
 h1 {
   margin-top: 30px;
-  font-size: 20px;
+  font-size: 22px;
+  padding-bottom: 5px;
   text-transform: uppercase;
+  border-bottom: 4px solid #037fe3;
+  color: #037fe3;
 }
 
-/* line 55, ../inventory_styles/sass/base.scss */
+/* line 51, ../inventory_styles/sass/base.scss */
 #accordion {
   margin-bottom: 5px;
 }
-/* line 56, ../inventory_styles/sass/base.scss */
+/* line 53, ../inventory_styles/sass/base.scss */
 #accordion .card-header {
   cursor: pointer;
 }
-/* line 57, ../inventory_styles/sass/base.scss */
+/* line 55, ../inventory_styles/sass/base.scss */
 #accordion .card-header .nwt {
   display: inline-block;
   background-color: #00ccff;
@@ -49,42 +52,43 @@ h1 {
   color: white;
   font-weight: bold;
 }
-/* line 67, ../inventory_styles/sass/base.scss */
+/* line 64, ../inventory_styles/sass/base.scss */
 #accordion .card-header div {
   font-size: 14px;
 }
-/* line 71, ../inventory_styles/sass/base.scss */
+/* line 68, ../inventory_styles/sass/base.scss */
 #accordion .card-header .info-bar .listed {
   color: #999;
   text-shadow: 0px 2px #FFF;
 }
-/* line 80, ../inventory_styles/sass/base.scss */
+/* line 74, ../inventory_styles/sass/base.scss */
 #accordion .card {
   margin-bottom: 3px;
 }
-/* line 83, ../inventory_styles/sass/base.scss */
+/* line 75, ../inventory_styles/sass/base.scss */
 #accordion .card-body {
+  font-size: 13px;
   position: relative;
 }
-/* line 85, ../inventory_styles/sass/base.scss */
+/* line 78, ../inventory_styles/sass/base.scss */
 #accordion .card-body .action-container {
   display: inline-block;
 }
-/* line 87, ../inventory_styles/sass/base.scss */
+/* line 80, ../inventory_styles/sass/base.scss */
 #accordion .card-body .action-container button {
   cursor: pointer;
   font-size: 12px;
 }
-/* line 93, ../inventory_styles/sass/base.scss */
+/* line 86, ../inventory_styles/sass/base.scss */
 #accordion .card-body .item-info-action .action-container {
   margin-top: 15px;
   text-align: left;
 }
-/* line 96, ../inventory_styles/sass/base.scss */
+/* line 89, ../inventory_styles/sass/base.scss */
 #accordion .card-body .item-info-action .action-container button {
   margin-bottom: 5px;
 }
-/* line 103, ../inventory_styles/sass/base.scss */
+/* line 94, ../inventory_styles/sass/base.scss */
 #accordion .card-body .bin {
   padding: 3px 5px;
   border-radius: 4px;
@@ -93,14 +97,14 @@ h1 {
   font-size: 13px;
 }
 
-/* line 115, ../inventory_styles/sass/base.scss */
+/* line 105, ../inventory_styles/sass/base.scss */
 .unlisted-items h4,
 .listed-items h4 {
   font-size: 15px;
   text-transform: uppercase;
-  margin-bottom: 30px;
+  margin-bottom: 15px;
 }
-/* line 120, ../inventory_styles/sass/base.scss */
+/* line 110, ../inventory_styles/sass/base.scss */
 .unlisted-items .no-items,
 .listed-items .no-items {
   border: 1px solid #CCC;
@@ -109,29 +113,29 @@ h1 {
   background-color: #f5f4eb;
 }
 
-/* line 127, ../inventory_styles/sass/base.scss */
+/* line 117, ../inventory_styles/sass/base.scss */
 .listed-items {
-  margin-bottom: 30px;
+  margin-bottom: 15px;
 }
 
-/* line 131, ../inventory_styles/sass/base.scss */
+/* line 121, ../inventory_styles/sass/base.scss */
 .ui-container {
   padding: 15px;
   border: 1px solid #ededed;
   background-color: whitesmoke;
   border-radius: 4px;
-  margin-bottom: 30px;
+  margin-bottom: 15px;
 }
-/* line 138, ../inventory_styles/sass/base.scss */
+/* line 128, ../inventory_styles/sass/base.scss */
 .ui-container.dash {
   text-align: center;
   text-shadow: 0 2px #FFF;
 }
-/* line 141, ../inventory_styles/sass/base.scss */
+/* line 131, ../inventory_styles/sass/base.scss */
 .ui-container.dash h3 {
   color: #999;
 }
-/* line 145, ../inventory_styles/sass/base.scss */
+/* line 133, ../inventory_styles/sass/base.scss */
 .ui-container.item {
   position: relative;
   padding: 15px;
@@ -141,27 +145,27 @@ h1 {
   margin-bottom: 5px;
   font-size: 13px;
 }
-/* line 153, ../inventory_styles/sass/base.scss */
+/* line 141, ../inventory_styles/sass/base.scss */
 .ui-container.item .title {
   font-size: 15px;
 }
-/* line 156, ../inventory_styles/sass/base.scss */
+/* line 144, ../inventory_styles/sass/base.scss */
 .ui-container.item .item-attr {
   text-align: right;
   font-size: 14px;
 }
 
-/* line 162, ../inventory_styles/sass/base.scss */
+/* line 150, ../inventory_styles/sass/base.scss */
 section {
   padding: 20px;
 }
 
-/* line 165, ../inventory_styles/sass/base.scss */
+/* line 151, ../inventory_styles/sass/base.scss */
 .my-group .form-control {
   width: 50%;
 }
 
-/* line 168, ../inventory_styles/sass/base.scss */
+/* line 152, ../inventory_styles/sass/base.scss */
 .login {
   margin-top: 40px;
   border: 1px solid #CCC;
@@ -169,7 +173,7 @@ section {
   background-color: #f7f7f7;
   padding: 30px;
 }
-/* line 174, ../inventory_styles/sass/base.scss */
+/* line 158, ../inventory_styles/sass/base.scss */
 .login img {
   margin-bottom: 30px;
 }
