--- a/inventory_styles/sass/base.scss
+++ b/inventory_styles/sass/base.scss
@@ -4,30 +4,25 @@
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 @import '_colors';
 
-@media (min-width: 576px) {
-
-}
+@media (min-width:  576px) {}
 
 // Medium devices (tablets, 768px and up)
-@media (min-width: 768px) {  }
+@media (min-width:  768px) {  }
 
 // Large devices (desktops, 992px and up)
-@media (min-width: 992px) {
+@media (min-width:  992px) {
     .card-header{
         .serial{
-            text-align:right;
+            text-align: right;
         }
     }
     .card-body{
         .item-info-action{
-
-        }
-        .item-info-action{
-            text-align: right;
+            text-align:  right;
             .action-container{
                 button{
-                    display:block;
-                    width:100%;
+                    display: block;
+                    width: 100%;
                 }
             }
         }
@@ -35,143 +30,130 @@
 }
 
 // Extra large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) {
+@media (min-width:  1200px) {
     .card-body{
         .item-info-action{
             .action-container{
-                margin-top: 0 !important;
+                margin-top:  0 !important;
             }
         }
     }
 }
 
-body{
-}
 h1{
     margin-top: 30px;
-    font-size:20px;
+    font-size: 22px;
+    padding-bottom: 5px;
     text-transform: uppercase;
+    border-bottom: 4px solid #037fe3;
+    color: #037fe3;
 }
 #accordion{
+    margin-bottom: 5px;
     .card-header{
+        cursor: pointer;
         .nwt{
-            display:inline-block;
-            background-color:#00ccff;
+            display: inline-block;
+            background-color: #00ccff;
             border-radius: 4px;
-            padding:3px 5px;
-            font-size:10px;
-            color:white;
+            padding: 3px 5px;
+            font-size: 10px;
+            color: white;
             font-weight: bold;
         }
-        cursor: pointer;
         div{
-            font-size:14px;
+            font-size: 14px;
         }
         .info-bar{
             .listed{
-                color:#999;
+                color: #999;
                 text-shadow: 0px 2px #FFF;
             }
         }
-        .serial{
-            // text-align:right;
-        }
     }
-    .card{
-        margin-bottom: 3px;
-    }
+    .card{ margin-bottom: 3px; }
     .card-body{
+        font-size: 13px;
         position: relative;
         .action-container{
-            display:inline-block;
+            display: inline-block;
             button{
                 cursor: pointer;
-                font-size:12px;
+                font-size: 12px;
             }
         }
         .item-info-action{
             .action-container{
                 margin-top: 15px;
-                text-align:left;
+                text-align: left;
                 button{
-                    // display:block;
-                    // width:100%;
                     margin-bottom: 5px;
                 }
             }
         }
         .bin{
-            padding:3px 5px;
-            border-radius:4px;
-            color:white;
+            padding: 3px 5px;
+            border-radius: 4px;
+            color: white;
             white-space: nowrap;
-            font-size:13px;
+            font-size: 13px;
         }
     }
-    margin-bottom: 5px;
 }
 .unlisted-items,
 .listed-items{
     h4{
-        font-size:15px;
+        font-size: 15px;
         text-transform: uppercase;
-        margin-bottom: 30px;
+        margin-bottom: 15px;
     }
     .no-items{
-        border:1px solid #CCC;
-        padding:10px;
-        font-size:12px;
+        border: 1px solid #CCC;
+        padding: 10px;
+        font-size: 12px;
         background-color: #f5f4eb;
     }
 }
 .listed-items{
-    margin-bottom: 30px;
+    margin-bottom: 15px;
 
 }
 .ui-container{
-    padding:15px;
-    border:1px solid #ededed;
+    padding: 15px;
+    border: 1px solid #ededed;
     background-color: $bgwhite;
-    border-radius:4px;
-    margin-bottom: 30px;
+    border-radius: 4px;
+    margin-bottom: 15px;
 
     &.dash{
-        text-align:center;
-        text-shadow:0 2px #FFF;
-        h3{
-            color:#999;
-        }
+        text-align: center;
+        text-shadow: 0 2px #FFF;
+        h3{color: #999;}
     }
     &.item{
         position: relative;
-        padding:15px;
-        border:1px solid #ededed;
+        padding: 15px;
+        border: 1px solid #ededed;
         border-radius: 4px;
         background-color: white;
-        margin-bottom: 5px;
-        font-size:13px;
+        margin-bottom:  5px;
+        font-size: 13px;
         .title{
-            font-size:15px;
+            font-size: 15px;
         }
         .item-attr{
-            text-align:right;
-            font-size:14px;
+            text-align: right;
+            font-size: 14px;
         }
     }
 }
-section{
-    padding:20px;
-}
-.my-group .form-control{
-    width:50%;
-}
+section{ padding: 20px; }
+.my-group .form-control{ width: 50%; }
 .login{
     margin-top: 40px;
-    border:1px solid #CCC;
-    border-radius:4px;
-    background-color:lighten(#CCC, 17%);
-    padding:30px;
-    img{
-        margin-bottom: 30px;
-    }
+    border: 1px solid #CCC;
+    border-radius: 4px;
+    background-color: lighten(#CCC, 17%);
+    padding: 30px;
+    img{ margin-bottom: 30px; }
 }
